[package]
name = "rust-axum-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.7.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.102"
httpc-test = "0.1.10"
